_sass/_nav.scss
nav:not([class*="ui-schedule"]) {
    position: fixed;
    z-index: 999;
    top: 0;
    left: 0;
    right: 0;
    ul {
        float: right;
        margin: 0;
        padding: 0;
        list-style-type: none;
        li {
            height: auto;
            float: left;
            width: auto;
            height: 68px;
            margin-left: 1px;
            overflow: hidden;
            a {
                position: relative;
                //background: darken($white, 12%);
                display: block;
                vertical-align: middle;
                padding: $spacer;
                font-size: 1em;
                color: $orange;
                background: rgba($white, 0.1);
                span {
                    float: left;
                    line-height: 0.8em;
                    margin-right: $spacer/4;
                }
                
            }
            &.title {
                position: absolute;
                left: 0;
            }
        }
    }
}

nav.ui-schedule {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    width: 150px;
    ul {
        margin: 0;
        padding: 0;
        list-style-type: none;
        
        li {
            height: calc(100vh/7);
            display: table;
            width: 100%;
            a {
                position: relative;
                //background: darken($white, 12%);
                display: table-cell;
                vertical-align: middle;
                width: 100%;
                padding: $spacer;
                font-size: 13px;
                text-transform: uppercase;
                color: $black;
                transition: all 260ms ease-in-out;
                border-left: 12px solid $blue;
                &:after {
                    content: "";
                    position: absolute;
                    z-index: -1;
                    top: 0;
                    left: -100%;
                    width: 100%;
                    height: 100%;
                    transition: all 260ms ease-in-out;
                    background: $blue;
                }
                &.on {
                    color: $white;
                    
                    font-weight: 700;
                    //background: none;
                     &:after {
                     left: 0;
                    }
                }
            }
            &:last-child {
                border: none;
            }
        }
    }
}

